# arm_demo

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  test_arm_control.py
config/: camera_workspace.yaml
examples/: 01_connect.py  02_read_joints.py  03_move_joint.py  04_move_pose.py  04_move_pose_ik.py  05_gripper.py  06_full_demo.py  07_forward_kinematics.py  08_move_linear.py  09_inverse_kinematics.py  10_move_to_pose.py  11_move_to_position.py  12_interactive_demo.py  13_vision_control.py  debug_cartesian.py  debug_moveL.py  diagnose_mode.py  measure_home.py  measure_safe_home.py
examples/ex14/: __init__.py  camera.py  color_tracker.py  detector.py  dvs_tracker.py  main.py  main_color.py  main_dvs.py  test_detector.py  test_model.py
examples/ex15/: drawing.py  dvs_tracker.py  test_figure8.py
scripts/: can_activate.sh  can_deactivate.sh  deploy.sh  find_optimal_x_for_yz_area.py  find_optimal_xz_for_y.py  find_optimal_y.py  find_optimal_z.py
src/piper_demo/: __init__.py  connection.py  coordinate_mapping.py  gripper.py  inverse_kinematics.py  jacobian.py  joint_reader.py  kinematics.py  motion.py  profiler.py  utils.py  vision_arm_controller.py
test/: test_csv_player.py  test_draw_boundary.py  test_draw_figure8.py  test_drawing_ik.py
tests/: test_profiler.py
