[project]
name = "arm-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"test_arm_control.py" = ["F403", "F405"]
